--- a/templates/alumnos/show.html.twig
+++ b/templates/alumnos/show.html.twig
@@ -12,12 +12,36 @@
                 <td>{{ alumno.id }}</td>
             </tr>
             <tr>
+                <th>NExpediente</th>
+                <td>{{ alumno.nExpediente }}</td>
+            </tr>
+            <tr>
                 <th>Nombre</th>
                 <td>{{ alumno.nombre }}</td>
             </tr>
             <tr>
-                <th>Created_on</th>
-                <td>{{ alumno.createdOn ? alumno.createdOn|date('Y-m-d H:i:s') : '' }}</td>
+                <th>Apellidos</th>
+                <td>{{ alumno.apellidos }}</td>
+            </tr>
+            <tr>
+                <th>FechaNacimiento</th>
+                <td>{{ alumno.fechaNacimiento ? alumno.fechaNacimiento|date('Y-m-d') : '' }}</td>
+            </tr>
+            <tr>
+                <th>Sexo</th>
+                <td>{{ alumno.sexo ? 'Yes' : 'No' }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ alumno.email }}</td>
+            </tr>
+            <tr>
+                <th>Telefono</th>
+                <td>{{ alumno.telefono }}</td>
+            </tr>
+            <tr>
+                <th>GradoId</th>
+                <td>{{ alumno.gradoId }}</td>
             </tr>
         </tbody>
     </table>
